--- a/buddy.yml
+++ b/buddy.yml
@@ -1,4 +1,4 @@
-- pipeline: "Build firmware"`
+- pipeline: "Build"`
   `trigger_mode: "ON_EVERY_PUSH"`
   `ref_name: "master"`
   `ref_type: "BRANCH"`
